--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongodb": "^6.6.1",
+    "mongoos": "^0.0.1-security",
+    "mongoose": "^8.3.4",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
